[Chore](Setup): Updated packages data.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = t5-2-ReliabilityModels__Labs
-description = Simulating and calculating reliability models
+name = t5-2-MachineLearningMethods
+description = Machine Learning Methods Course
 author = DeadlySquad13
 license = MIT
-license_file = LICENSE
+license_files = LICENSE
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3.10.0
@@ -11,6 +11,7 @@ classifiers =
 [options]
 packages =
     lab1
+    control_work1
 install_requires =
 python_requires = >=3.10
 package_dir =
@@ -28,4 +29,4 @@ testing =
 keymappings = py.typed
 
 [flake8]
-max-line-length = 80
+max-line-length = 100
