--- a/setup.cfg
+++ b/setup.cfg
@@ -9,14 +9,15 @@ classifiers =
     Programming Language :: Python :: 3.10.0
 
 [options]
-packages =
-    lab1
-    control_work1
+packages =find:
 install_requires =
 python_requires = >=3.10
 package_dir =
     =src
 zip_safe = no
+
+[options.packages.find]
+where=src
 
 [options.extras_require]
 testing =
